Updates for footer
Updates for footer and theme name

--- a/triton-theme/src/main/webapp/css/custom.css
+++ b/triton-theme/src/main/webapp/css/custom.css
@@ -1191,7 +1191,7 @@ body {
 		position: fixed;
 		bottom: 0;
 		width: 100%;
-		background-color: #0066A1;
+		background-color: #010343;
 		padding: 20px 0px;
 		color: white;
 		font-size: 14px;
