--- a/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
+++ b/citizensfla-theme/src/main/webapp/templates/portal_normal.vm
@@ -90,6 +90,23 @@ $theme.include($body_top_include)
 <script type="text/javascript" src="${theme_display.getPathThemeRoot()}/js/jquery.js"></script>
 <script type="text/javascript" src="${theme_display.getPathThemeRoot()}/js/bootstrap.min.js"></script>
 
+<script>
+    $(function() {
+        var box = $('.portlet-boundary_145_.portlet-dockbar'); // float-fixed block
+
+        var top = box.offset().top - parseFloat(box.css('marginTop').replace(/auto/, 0));
+        $(window).scroll(function(){
+            var windowpos = $(window).scrollTop();
+            if(windowpos < top) {
+                box.css('position', 'static');
+            } else {
+                box.css('position', 'fixed');
+                box.css('top', 37);
+            }
+        });
+    });
+</script>
+
 $theme.include($body_bottom_include)
 
 $theme.include($bottom_include)
