--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -174,6 +174,7 @@ body {
 							height: 31px;
 							line-height: 26px;
 							text-align: left;
+							overflow-x: hidden;
 							&:before {
 								content: "Welcome "
 							}
