--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -20,7 +20,25 @@ html {
 body {
 	height: 100% !important;
 	margin: 0;
+	font-family: 'Avenir35-Light';
+	background-color: #0066A1;
+	[role="main"] {
+		background-color: white;
+	}
+	.modal {
+		display: block;
+		overflow: hidden;
+		position: fixed;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		z-index: 1040;
+		-webkit-overflow-scrolling: touch;
+		outline: 0;
+	}
 }
+
 .aui {
 	#skip-to-content {
 		display: none;
@@ -988,6 +1006,8 @@ body {
 		}
 	}
 	#_145_navAccountControlsNavbarCollapse {
+		background-color: $darkblue;
+		margin-left: 0;
 		> .nav.nav-account-controls > li:nth-last-child(3) {
 			margin-right: 18px;
 			&:after {
