--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -21,7 +21,6 @@ body {
 	height: 100% !important;
 	margin: 0;
 	font-family: 'Avenir35-Light';
-	background-color: #0066A1;
 	[role="main"] {
 		background-color: white;
 	}
@@ -950,6 +949,7 @@ body {
 			.container {
 				max-width: 1200px;
 				height: 37px;
+				background: $darkblue;
 				.collapse.nav-collapse {
 					visibility: visible;
 					display: block;
@@ -1007,7 +1007,8 @@ body {
 	}
 	#_145_navAccountControlsNavbarCollapse {
 		background-color: $darkblue;
-		margin-left: 0;
+		margin: 0 auto;
+		max-width: 1200px;
 		> .nav.nav-account-controls > li:nth-last-child(3) {
 			margin-right: 18px;
 			&:after {
