--- a/triton-theme/src/main/webapp/templates/portal_normal.vm
+++ b/triton-theme/src/main/webapp/templates/portal_normal.vm
@@ -70,16 +70,16 @@ $theme.include($body_top_include)
     <div class="links">
       <a href="#">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">Site Map</a>
     </div>
-    <p class="copyright">Triton</p>
+    <p class="copyright">Copyright 2015 Citizens Property Insurance Corporation of Florida</p>
 
     <div class="social">
-                <a href="https://www.facebook.com/" class="navbar-btn ">
+                <a href="https://www.facebook.com/pages/Citizens-Property-Insurance-Corporation/313353039304?ref=ts&fref=ts" class="navbar-btn ">
                     <img src="${theme_display.getPathThemeRoot()}/images/custom/fb.png">
                 </a>
-                <a href="https://twitter.com/triton" class="navbar-btn ">
+                <a href="https://twitter.com/citizens_fla" class="navbar-btn ">
                     <img src="${theme_display.getPathThemeRoot()}/images/custom/twt.png">
                 </a>
-                <a href="https://www.linkedin.com/" class="navbar-btn ">
+                <a href="https://www.linkedin.com/company/42110?trk=tyah" class="navbar-btn ">
                     <img src="${theme_display.getPathThemeRoot()}/images/custom/lnkd.png">
                 </a>
             </div>
@@ -89,6 +89,25 @@ $theme.include($body_top_include)
 
 <script type="text/javascript" src="${theme_display.getPathThemeRoot()}/js/jquery.js"></script>
 <script type="text/javascript" src="${theme_display.getPathThemeRoot()}/js/bootstrap.min.js"></script>
+
+<script>
+    $(function() {
+        var box = $('#_145_navAccountControlsNavbarCollapse'); // float-fixed block
+
+        var top = box.offset().top - parseFloat(box.css('marginTop').replace(/auto/, 0));
+        $(window).scroll(function(){
+            var windowpos = $(window).scrollTop();
+            if(windowpos < top) {
+                box.css('position', 'static');
+            } else {
+                box.css('position', 'fixed');
+                box.css('top', 0);
+                box.css('right', 0);
+                box.css('left', 0);
+            }
+        });
+    });
+</script>
 
 $theme.include($body_bottom_include)
 
