--- a/citizensfla-theme/src/main/webapp/css/custom.css
+++ b/citizensfla-theme/src/main/webapp/css/custom.css
@@ -1004,10 +1004,14 @@ body {
 			right: 15px;
 		}
 	}
-	#_145_navAccountControlsNavbarCollapse {
+	.navAccountControlsDivClass {
 		background-color: $darkblue;
+		height: 37px;
+	}
+	#_145_navAccountControlsNavbarCollapse {
 		margin: 0 auto !important;
 		max-width: 1200px !important;
+		width: 100%;
 		> .nav.nav-account-controls > li:nth-last-child(3) {
 			margin-right: 18px;
 			&:after {
